# day-night-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  analysis.md  classifier_code.py  docker-compose.yml  feature_extractor.py  feature_table.csv  generate_assets.py  pyproject.toml  train_and_save_model.py
.devcontainer/: devcontainer.json
dataset/: README.md
docs/: DEPLOYMENT.md  DOCKER.md  FAQ.md  KUBERNETES.md  KUBERNETES_JOURNEY.md  PROJECT_POSTMORTEM.md  README.md  UV_GUIDE.md
gui_app/: README.md  app.py  requirements.txt
gui_app/assets/: knn_model.joblib  label_encoder.joblib  scaler.joblib
k8s/: README.md  deployment.yaml  service.yaml
